appId: com.marianoksairi.reflect
---
# Assumes user is already logged in via login.yaml
- launchApp
- assertVisible: 'Journal'
- tapOn:
    text: 'New Entry'
- assertVisible: "What's on your mind?"
- tapOn:
    text: "What's on your mind?"
- inputText: 'Today was a great day for testing.'
- tapOn:
    text: 'Save'
- assertVisible: 'Journal'
- assertVisible: 'Today was a great day for testing.'
